Relaxed DashboardServiceImpl.isSyntheticSignature() a bit.